--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@twa-dev/sdk": "^7.0.0",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "firebase": "^10.12.3",
+    "framer-motion": "^11.3.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
