--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/helper-plugin-utils": "^7.24.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.4",
@@ -21,8 +22,11 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.18",
     "react": "^18.3.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-spring": "^9.7.4",
+    "react-use-gesture": "^9.1.3",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
