--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@react-spring/web": "^9.7.4",
     "@twa-dev/sdk": "^7.0.0",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
