--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.19",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-spring": "^9.7.4",
     "react-use-gesture": "^9.1.3",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
