--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.19",
     "gsap": "^3.12.5",
+    "pixi.js": "^8.5.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-custom-roulette": "^1.4.1",
