--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,21 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Güncel sürüm v3
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3  # Güncel sürüm v3
         with:
-          node-version: 16
+          node-version: '16'  # Veya '20' kullanabilirsiniz
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        uses: npm-cli/installer-action@v2  # Güncel npm-install aksiyonu
 
       - name: Build project
         run: npm run build
 
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Güncel sürüm v4
         with:
           name: production-files
           path: ./dist
@@ -39,13 +39,13 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4  # Güncel sürüm v4
         with:
           name: production-files
           path: ./dist
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3  # Güncel sürüm v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
