--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-confetti": "^6.1.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-spring": "^9.7.4",
