--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twa-dev/sdk": "^7.0.0",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "axios": "^1.7.7",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.19",
     "gsap": "^3.12.5",
@@ -37,6 +38,7 @@
     "use-sound": "^4.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/material-ui": "^0.21.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
