--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/x-data-grid": "^7.22.2",
     "@react-spring/web": "^9.7.4",
     "@twa-dev/sdk": "^7.0.0",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.19",
     "gsap": "^3.12.5",
+    "metalpriceapi-ts": "^1.0.1",
     "pixi.js": "^8.5.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
