--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.19",
@@ -29,6 +30,7 @@
     "metalpriceapi-ts": "^1.0.1",
     "pixi.js": "^8.5.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
